# INFT2503

task1/: CMakeLists.txt  solution1.cpp  solution2.cpp
task10/: main.cpp
task2/: CMakeLists.txt  exercise1.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp
task3/: CMakeLists.txt  exercise1.cpp
task3/exercise1_2/: CMakeLists.txt
task3/exercise1_2/include/: Circle.hpp
task3/exercise1_2/src/: Circle.cpp  main.cpp
task3/exercise2/: CMakeLists.txt  Circle.cpp  Circle.h  main.cpp
task3/exercise3/: CMakeLists.txt  Commodity.hpp  main.cpp
task3/exercise3/include/: commodity.hpp
task3/exercise3/src/: commodity.cpp  main.cpp
task3/exercise4/: CMakeLists.txt  main.cpp
task3/exercise4/src/: main.cpp
task4/exercise1/src/: main.cpp
task4/exercise2/: CMakeLists.txt
task4/exercise2/src/: main.cpp
task5/: CMakeLists.txt
task5/include/: ChessBoard.hpp  ChessPiece.hpp
task5/src/: ChessBoard.cpp  ChessPiece.cpp  main.cpp
task6/: CMakeLists.txt
task6/include/: WebServer.hpp
task6/src/: WebServer.cpp  main.cpp
task7/: CMakeLists.txt
task7/exercise1/: CMakeLists.txt  exercise1b.md
task7/exercise1/include/: fraction.hpp
task7/exercise1/src/: fraction.cpp  main.cpp
task7/exercise2/: CMakeLists.txt
task7/exercise2/include/: Set.hpp
task7/exercise2/src/: Set.cpp  main.cpp
task8/: CMakeLists.txt
task8/exercise1/: CMakeLists.txt
task8/exercise1/include/: equal.hpp
task8/exercise1/src/: main.cpp
task8/exercise2/: CMakeLists.txt  README.md
task8/exercise2/include/: pair.hpp
task8/exercise2/src/: main.cpp
task9/: CMakeLists.txt
task9/exercise_a/: CMakeLists.txt
task9/exercise_a/src/: main.cpp
task9/exercise_b/: CMakeLists.txt
task9/exercise_b/src/: main.cpp
task9/exercise_c/: CMakeLists.txt
task9/exercise_c/src/: main.cpp
