cmake_minimum_required(VERSION 3.5)

project(task2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_compile_options(-Wall -Wextra)

add_executable(exercise1 exercise1.cpp)
add_executable(exercise4 exercise4.cpp)
add_executable(exercise5 exercise5.cpp)
add_executable(exercise6 exercise6.cpp)
